Sort order layout fix #888, get back vertical alignment, order digit shows a bit when filter input appearing

--- a/frontend/app/assets/css/less/agx-bootstrap-components/tables.less
+++ b/frontend/app/assets/css/less/agx-bootstrap-components/tables.less
@@ -49,16 +49,16 @@
           .variants-table-search-field {
             display: block;
             float: left;
-            height: 24px;
+            height: 32px;
             left: 68px;
             overflow: hidden;
             position: relative;
-            top: -28px;
+            top: -32px;
             width: 24px!important;
             background: #fff;
 
             button {
-              padding: 0;
+              padding: 4px 0;
               border-radius: 0;
               i:before {
                 .md-i();
